[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Games/PictureGallery.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Pile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Common/DeckGenerator.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Cosmetic/PileSprite.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "PictureGalleryDeal"
length = 8.0
step = 0.25
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75, 4, 4.25, 4.5, 4.75, 5, 5.25, 5.5, 5.75, 6, 6.25, 6.5, 6.75, 7, 7.25, 7.5, 7.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "PictureGalleryDealHand"
length = 0.8
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
}, {
"args": [  ],
"method": "dealNextCard"
} ]
}

[node name="PictureGallery" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
dealSpeed = 3.0

[node name="Deck" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, 128 )
maxCardSeparation = Vector2( 0.1, -0.1 )
size = Vector2( 5, -5 )

[node name="DeckGenerator" type="Node2D" parent="Deck"]
script = ExtResource( 3 )
suits = [ 1, 2, 3, 4, 1, 2, 3, 4 ]
values = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]

[node name="Sprite" parent="Deck" instance=ExtResource( 4 )]

[node name="AcesPile" parent="." instance=ExtResource( 2 )]
position = Vector2( -168, 128 )
maxCardSeparation = Vector2( 10, 0 )
size = Vector2( 100, 0 )

[node name="Sprite" parent="AcesPile" instance=ExtResource( 4 )]

[node name="HandPile1" parent="." instance=ExtResource( 2 )]
position = Vector2( -168, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile1" instance=ExtResource( 4 )]

[node name="HandPile2" parent="." instance=ExtResource( 2 )]
position = Vector2( -120, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile2" instance=ExtResource( 4 )]

[node name="HandPile3" parent="." instance=ExtResource( 2 )]
position = Vector2( -72, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile3" instance=ExtResource( 4 )]

[node name="HandPile4" parent="." instance=ExtResource( 2 )]
position = Vector2( -24, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile4" instance=ExtResource( 4 )]

[node name="HandPile5" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile5" instance=ExtResource( 4 )]

[node name="HandPile6" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile6" instance=ExtResource( 4 )]

[node name="HandPile7" parent="." instance=ExtResource( 2 )]
position = Vector2( 120, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile7" instance=ExtResource( 4 )]

[node name="HandPile8" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, 216 )
maxCardSeparation = Vector2( 0, 20 )
size = Vector2( 0, 120 )

[node name="Sprite" parent="HandPile8" instance=ExtResource( 4 )]

[node name="2Pile1" parent="." instance=ExtResource( 2 )]
position = Vector2( -168, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile1" instance=ExtResource( 4 )]

[node name="2Pile2" parent="." instance=ExtResource( 2 )]
position = Vector2( -120, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile2" instance=ExtResource( 4 )]

[node name="2Pile3" parent="." instance=ExtResource( 2 )]
position = Vector2( -72, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile3" instance=ExtResource( 4 )]

[node name="2Pile4" parent="." instance=ExtResource( 2 )]
position = Vector2( -24, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile4" instance=ExtResource( 4 )]

[node name="2Pile5" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile5" instance=ExtResource( 4 )]

[node name="2Pile6" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile6" instance=ExtResource( 4 )]

[node name="2Pile7" parent="." instance=ExtResource( 2 )]
position = Vector2( 120, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile7" instance=ExtResource( 4 )]

[node name="2Pile8" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, 40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="2Pile8" instance=ExtResource( 4 )]

[node name="3Pile1" parent="." instance=ExtResource( 2 )]
position = Vector2( -168, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile1" instance=ExtResource( 4 )]

[node name="3Pile2" parent="." instance=ExtResource( 2 )]
position = Vector2( -120, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile2" instance=ExtResource( 4 )]

[node name="3Pile3" parent="." instance=ExtResource( 2 )]
position = Vector2( -72, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile3" instance=ExtResource( 4 )]

[node name="3Pile4" parent="." instance=ExtResource( 2 )]
position = Vector2( -24, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile4" instance=ExtResource( 4 )]

[node name="3Pile5" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile5" instance=ExtResource( 4 )]

[node name="3Pile6" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile6" instance=ExtResource( 4 )]

[node name="3Pile7" parent="." instance=ExtResource( 2 )]
position = Vector2( 120, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile7" instance=ExtResource( 4 )]

[node name="3Pile8" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, -40 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="3Pile8" instance=ExtResource( 4 )]

[node name="4Pile1" parent="." instance=ExtResource( 2 )]
position = Vector2( -168, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile1" instance=ExtResource( 4 )]

[node name="4Pile2" parent="." instance=ExtResource( 2 )]
position = Vector2( -120, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile2" instance=ExtResource( 4 )]

[node name="4Pile3" parent="." instance=ExtResource( 2 )]
position = Vector2( -72, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile3" instance=ExtResource( 4 )]

[node name="4Pile4" parent="." instance=ExtResource( 2 )]
position = Vector2( -24, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile4" instance=ExtResource( 4 )]

[node name="4Pile5" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile5" instance=ExtResource( 4 )]

[node name="4Pile6" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile6" instance=ExtResource( 4 )]

[node name="4Pile7" parent="." instance=ExtResource( 2 )]
position = Vector2( 120, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile7" instance=ExtResource( 4 )]

[node name="4Pile8" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, -120 )
maxCardSeparation = Vector2( 1, -1 )
size = Vector2( 5, -5 )

[node name="Sprite" parent="4Pile8" instance=ExtResource( 4 )]

[node name="PlayArea" type="Position2D" parent="."]
position = Vector2( -190, -174 )

[node name="PlayArea2" type="Position2D" parent="."]
position = Vector2( 192, 384 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PictureGalleryDeal = SubResource( 1 )
anims/PictureGalleryDealHand = SubResource( 2 )
[connection signal="_pile_clicked" from="Deck" to="." method="_on_Deck__pile_clicked"]
